style.css
/* ... */
.dropdown-toggle{-webkit-font-smoothing:subpixel-antialiased}
h1,h2,h3,h4{font-weight:400;letter-spacing:-0.05em;color:#39275b}
h1{margin:10px 0 25px;font-size:2.5em;font-weight:400;line-height:1.1em}h1 i,h1 em{font-weight:400;font-family:Baskerville,'Times New Roman',Times,serif;text-transform:lowercase;font-size:1.15em}
h2,h3,h4{margin-bottom:10px;font-weight:600;letter-spacing:0;margin-top:1em}
h2{font-size:1.5em;line-height:26px;letter-spacing:0}
h3{color:#39275b;font-size:1.2em;line-height:23px}
h4{font-size:1em}
b,strong{font-weight:600}
.container a{font-weight:600}
a:focus{color:#005580;text-decoration:underline}
p{margin-bottom:1.4em}
ul{margin-left:5px;margin-bottom:1.4em}
ul li{margin-left:0;margin-bottom:5px;background:url('img/bullet-gold.png') no-repeat left 7px transparent;padding-left:12px;list-style:none}
#branding ul li{margin-left:0;background:none;padding-left:0}
img{height:auto !important}
object,embed,iframe{margin:10px 0 15px;display:block;max-width:100% !important;border:none}
hr{clear:both}
summary{font-family:'Droid Serif',serif;font-weight:300;font-style:italic;font-size:1.6em;color:#39275b;padding:17px 0;margin:10px 0 20px 0;border-top:1px solid #f3f3f3;line-height:30px;border-bottom:1px solid #f3f3f3}
.intro,.lead{color:#6b6b6b;font-family:'Droid Serif',serif;font-weight:300;font-size:1.2em;line-height:1.5em;font-style:italic;border-top:1px solid #ebebeb;border-bottom:1px solid #ebebeb;padding:20px 0}
small{font-family:'Droid Serif',serif;font-style:italic}
blockquote{line-height:25.5px;font-family:'Droid Serif',serif;font-size:16px;font-style:italic;padding:10px 10px;color:#777;font-weight:300;position:relative;padding-left:20px;border-left:2px solid #f4f4f4}blockquote p{line-height:1.45;font-size:15.5px}
blockquote.align-left,blockquote.align-right{margin:30px 0 30px 0;padding:20px 0 0 15px;border:none;width:40%}blockquote.align-left:after,blockquote.align-right:after{content:"";position:absolute;top:-10px;left:15px;width:65px;height:5px;background-color:#ebebeb}
blockquote.align-left{float:left;margin-right:50px}
blockquote.align-right{float:right;margin-left:50px}
.type-page ul,.type-post ul{overflow:hidden}
input[type="submit"]{text-align:center;background-color:#048ac2;color:#fff;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;-moz-background-clip:padding-box;-webkit-background-clip:padding-box;background-clip:padding-box;padding:10px 18px;margin-bottom:50px;font-weight:bold;border:none;font-size:13px;text-indent:0;overflow:hidden;display:block}input[type="submit"]:hover{-webkit-transition:background-color .2s linear;-moz-transition:background-color .2s linear;-o-transition:background-color .2s linear;transition:background-color .2s linear;background-color:#025577;text-decoration:none;color:#f4f4f4}
.button{text-align:center;background-color:#048ac2;color:#fff;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;-moz-background-clip:padding-box;-webkit-background-clip:padding-box;background-clip:padding-box;padding:10px 18px;margin-bottom:50px;font-weight:bold;border:none;font-size:13px;text-indent:0;overflow:hidden;display:block;display:inline}.button:hover{-webkit-transition:background-color .2s linear;-moz-transition:background-color .2s linear;-o-transition:background-color .2s linear;transition:background-color .2s linear;background-color:#025577;text-decoration:none;color:#f4f4f4}
.info-box-large{padding:30px 10px 15px;margin:15px 0 30px 50px;width:200px;border-left:none;position:relative}
.date{font-family:'Droid Serif',serif;font-style:italic;margin:10px 0 0}
.author-info{font-family:'Droid Serif',serif;font-style:italic;margin-bottom:30px;position:relative}.author-info:before{content:" ";position:absolute;bottom:-15px;left:1px;width:50px;height:2px;background-color:#e2e2e2}
.blog .entry-title{padding-right:90px;margin:10px 0}
.blog.featured-image #arrow-mark{left:auto;top:auto;position:static;margin:-17px 0 0 -55px;width:675px;height:91px;display:block;margin-bottom:20px}
.entry-header{position:relative}
.comments-link a{background:url('img/comment-bubble.png') no-repeat 0 4px transparent;color:#999;line-height:35px;overflow:hidden;padding:0 0 0 24px;position:absolute;top:0;right:-19px;text-align:center;text-decoration:none;width:43px;height:36px}.comments-link a:hover{background-position:0 -37px}
#uwalert-alert-message div{width:1100px;margin:0 auto;padding:5px 0 15px}
#uwalert-alert-message h1,#uwalert-alert-message p{color:#fff;padding:5px 100px 0 200px;margin:0}
#uwalert-alert-message h1{font-size:18px}
#uwalert-alert-message p{font-size:13px;line-height:15px}
#uwalert-alert-message a{color:#fde048}
.uwalert-red{background-color:#c61029}
.uwalert-red div{background:url('https://www.washington.edu/static/alert_logo_red.jpg') no-repeat 0 -38px}
#alert-mini.uwalert-red{background:url('https://www.washington.edu/static/alert_logo_red.jpg') no-repeat 16% 14% #c61029;background-size:18%}
.uwalert-steel{background-color:#597286}
.uwalert-steel div{background:url('https://www.washington.edu/static/alert_logo_steel.jpg') no-repeat 0 -38px}
#alert-mini.uwalert-steel{background:url('https://www.washington.edu/static/alert_logo_steel.jpg') no-repeat 16% 14% #597286;background-size:18%}
.uwalert-blue{background-color:#0193c9}
.uwalert-blue div{background:url('https://www.washington.edu/static/alert_logo_steel.jpg') no-repeat 0 -38px}
#alert-mini.uwalert-blue{background:url('https://www.washington.edu/static/alert_logo_steel.jpg') no-repeat 16% 14% #597286;background-size:18%}
.uwalert-orange{background-color:#ec7330}
.uwalert-orange div{background:url('https://www.washington.edu/static/alert_logo_orange.jpg') no-repeat 0 -38px}
#alert-mini.uwalert-orange{background:url('https://www.washington.edu/static/alert_logo_orange.jpg') no-repeat 16% 14% #ec7330;background-size:18%}
.uw-alert .patch{top:-30px}
/* ... */

